--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "codemirror-editor-vue3": "^2.8.0",
     "element-plus": "^2.9.11",
     "monaco-editor": "^0.52.2",
